# geocouch

./: .gitignore  CMakeLists.txt  COPYING  Emakefile  Makefile  README.md  rebar  rebar.config  rebar.config.script  rebar_couchdb.config
cmake_modules/: do-test.cmake
docs/: internals.md
etc/couchdb/default.d/: geocouch.ini
etc/couchdb/local.d/: geocouch.ini  geocouch.ini_
gc-couchbase/: CMakeLists.txt  rebar.config
gc-couchbase/etc/couchdb/default.d/: geocouch.ini
gc-couchbase/include/: couch_spatial.hrl
gc-couchbase/src/: gc-couchbase.app.src  spatial_http.erl  spatial_merger.erl  spatial_view.erl  vtree_copy.erl
gc-couchbase/test/: 00-prepare.t  01-initial-build.t  02-query-params.t  03-incremental-update.t  04-emit.t  05-emit-errors.t  06-query-parse.t  07-main-compaction.t  08-replica-compaction.t  09-compaction-retry.t  10-ddoc-validation.t  CMakeLists.txt  spatial_test_util.erl
gc-couchdb/: README.md
gc-couchdb/include/: couch_spatial.hrl
gc-couchdb/share/www/script/test/: etags_spatial.js  list_spatial.js  spatial.js  spatial_bugfixes.js  spatial_compaction.js  spatial_design_docs.js  spatial_offsets.js  spatial_range.js
gc-couchdb/src/: couch_spatial.erl  couch_spatial.hrl  couch_spatial_compactor.erl  couch_spatial_http.erl  couch_spatial_index.erl  couch_spatial_list.erl  couch_spatial_updater.erl  couch_spatial_util.erl  etap_exception.erl  gc-couchdb.app.src  geocouch_file.erl
gc-couchdb/utils/: runjstests.sh
include/: vtree.hrl
share/www/script/test/: list_spatial.js  multiple_spatial_rows.js  spatial.js  spatial_compaction.js  spatial_design_docs.js  spatial_merging.js  spatial_opensearch.js
src/: geocouch.app.src
src/geocouch/: couch_httpd_spatial.erl  couch_httpd_spatial_list.erl  couch_httpd_spatial_merger.erl  couch_spatial.erl  couch_spatial.hrl  couch_spatial_cleanup.erl  couch_spatial_compactor.erl  couch_spatial_group.erl  couch_spatial_list.erl  couch_spatial_merger.erl  couch_spatial_updater.erl  couch_spatial_util.erl  couch_spatial_validation.erl  geocouch_duplicates.erl  geocouch_file.erl
src/vtree/: README  run_vtreestats.erl  run_vtreeviz.erl  vtree.erl  vtree_bulk.erl  vtree_choose.erl  vtree_delete.erl  vtree_insbench.erl  vtree_insert.erl  vtree_io.erl  vtree_modify.erl  vtree_search.erl  vtree_split.erl  vtree_test.erl  vtree_util.erl  vtreestats.erl  vtreeviz.erl
test/: 001-vtree.t  002-bulk.t  003-split.t  004-util.t  005-choose.t  006-insert.t  007-io.t  008-search.t  009-modify.t  010-delete.t  100-updater.t  200-compact.t  300-validation.t  gc_test_util.erl  vtree_test_util.erl
vtree/: CMakeLists.txt  rebar.config  rebar.config.script
vtree/include/: vtree.hrl
vtree/src/: vtree.app.src  vtree_choose.erl  vtree_cleanup.erl  vtree_delete.erl  vtree_insert.erl  vtree_io.erl  vtree_modify.erl  vtree_search.erl  vtree_split.erl  vtree_util.erl
vtree/test/: 003-split.t  004-util.t  006-insert.t  007-io.t  008-search.t  009-modify.t  010-delete.t  CMakeLists.txt  vtree_test_util.erl
wkb/: CMakeLists.txt  README.md
wkb/include/: wkb.hrl
wkb/src/: wkb.app.src  wkb_reader.erl  wkb_writer.erl
wkb/test/: wkb_reader_test.erl  wkb_test.erl
