PROJECT (geocouch)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

LIST (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../tlm/cmake/Modules")
INCLUDE (FindCouchbaseErlang)

# XXX vmx 2014-09-02: The "+export_all" is just a temp hack
SET(ERLANG_COMPILE_FLAGS +debug_info -Werror +export_all)

SET(COUCHDB_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../couchdb)
SET(GEOCOUCH_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
SET(COUCHSTORE_BIN_PATH ${CMAKE_BINARY_DIR}/couchstore)

ADD_ERLANG_INCLUDE_DIR(${COUCHDB_SOURCE_DIR}/src/couchdb)
ADD_ERLANG_INCLUDE_DIR(${PROJECT_SOURCE_DIR})

# For the tests
SET(COUCHDB_RUNTEST ${COUCHDB_SOURCE_DIR}/test/etap/runtest.py)
ADD_CUSTOM_TARGET(geocouch-check COMMAND ${CMAKE_CTEST_COMMAND} -j4)

ADD_SUBDIRECTORY(vtree)
ADD_SUBDIRECTORY(gc-couchbase)
